# slice

./: .gitignore  README.md  SKILL.md  pyproject.toml
docs/: bypass-final-layer.md
research/: kasada-bypass-research.md
slice/: __init__.py  browser.py  cli.py  connection.py  stealth_browser.py
slice/captcha/: api.py  audio.py  slider.py  solver.py
slice/fingerprint/: generator.py  validator.py
slice/fingerprint/profiles/: linux_firefox_amd.json  macos_chrome_apple.json  windows_chrome_intel.json  windows_chrome_nvidia.json
slice/interceptor/: requests.py  responses.py
slice/proxy/: manager.py  providers.py
slice/stealth/: apply.py  audio.py  behavior.py  canvas.py  chrome.py  fonts.py  headers.py  navigator.py  screen.py  timezone.py  tls.py  webgl.py
slice/utils/: human.py
tests/: deep_validation.py  stress_test.py  test_e2e.py  test_phase_1_2.py  test_phase_3.py  test_phase_4.py  test_phase_5.py  test_stealth_validation.py
